# LSW

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/lsw-cli/: Cargo.toml
crates/lsw-cli/src/: cli.rs  color.rs  install.rs  lswd.rs  main.rs
crates/lsw-cli/src/cmd/: build.rs  config.rs  debug.rs  inspect.rs  integration.rs  lang.rs  mod.rs  package.rs  project.rs  state.rs  tooling.rs  verify.rs
crates/lsw-config/: Cargo.toml
crates/lsw-config/src/: dirs.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  types.rs
crates/lsw-core/: Cargo.toml
crates/lsw-core/src/: auditops.rs  buildops.rs  caseops.rs  ciops.rs  compatdb.rs  compatops.rs  configops.rs  daemonops.rs  dapops.rs  dbgproxy.rs  debugops.rs  depsops.rs  diffops.rs  doctorops.rs  dotnetops.rs  dumpops.rs  dwarfline.rs  emulateops.rs  envops.rs  error.rs  explainops.rs  ideops.rs  inspectops.rs  installops.rs  lib.rs  msixops.rs  packageops.rs  pluginops.rs  project.rs  psops.rs  registryops.rs  runops.rs  rustops.rs  sbomops.rs  sdkops.rs  serviceops.rs  signops.rs  stringsops.rs  testops.rs  traceops.rs  (+4 more)
crates/lsw-core/src/buildops/: aot.rs  lockfile.rs  mod.rs  toolchain.rs
crates/lsw-core/src/verifyops/: backtrace.rs  dumps.rs  mod.rs  probe.rs
crates/lsw-core/tests/: e2e.rs
crates/lsw-path/: Cargo.toml
crates/lsw-path/src/: error.rs  lib.rs  linux.rs  types.rs  windows.rs
crates/lsw-pe/: Cargo.toml
crates/lsw-pe/src/: details.rs  detect.rs  error.rs  hardening.rs  imports.rs  lib.rs  resources.rs  timestamp.rs  types.rs
crates/lsw-provider-example/: Cargo.toml
crates/lsw-provider-example/src/: main.rs
crates/lsw-runtime/: Cargo.toml
crates/lsw-runtime/src/: env.rs  gpu.rs  lib.rs  sandbox.rs  types.rs  wine.rs
crates/lsw-toolchain/: Cargo.toml
crates/lsw-toolchain/src/: crossfile.rs  error.rs  gnu.rs  lib.rs  msvc.rs  provider.rs  util.rs
docs/: AUDIT.md  compatibility.md  environments.md  sandboxing.md  toolchains.md
editors/: README.md
editors/jetbrains/: lsw-tools.xml
editors/nvim/lua/: lsw.lua
editors/vscode/: LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
