[workspace]
resolver = "3"
members = [
    "crates/lsw-cli",
    "crates/lsw-core",
    "crates/lsw-config",
    "crates/lsw-toolchain",
    "crates/lsw-runtime",
    "crates/lsw-path",
    "crates/lsw-pe",
    "crates/lsw-provider-example",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/johnqherman/LSW"
homepage = "https://github.com/johnqherman/LSW"
readme = "README.md"
keywords = ["windows", "wine", "cross-compilation", "mingw", "pe"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
lsw-core = { path = "crates/lsw-core", version = "0.2.0" }
lsw-config = { path = "crates/lsw-config", version = "0.2.0" }
lsw-toolchain = { path = "crates/lsw-toolchain", version = "0.2.0" }
lsw-runtime = { path = "crates/lsw-runtime", version = "0.2.0" }
lsw-path = { path = "crates/lsw-path", version = "0.2.0" }
lsw-pe = { path = "crates/lsw-pe", version = "0.2.0" }

anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
dirs = "6"
libc = "0.2"
minidump = "0.26"
notify = "6"
object = { version = "0.37", default-features = false, features = ["read", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
proptest = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
