[package]
name = "lsw"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lsw"
path = "src/main.rs"

[[bin]]
name = "lswd"
path = "src/lswd.rs"

[dependencies]
lsw-core.workspace = true
lsw-config.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
