[package]
name = "lsw-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration types and filesystem layout for LSW."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
