[package]
name = "lsw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lsw-config.workspace = true
lsw-toolchain.workspace = true
lsw-runtime.workspace = true
lsw-path.workspace = true
lsw-pe.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
