[package]
name = "lsw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core orchestration for LSW: environments, builds, runtime, packaging, analysis."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lsw-config.workspace = true
lsw-toolchain.workspace = true
lsw-runtime.workspace = true
lsw-path.workspace = true
lsw-pe.workspace = true
base64.workspace = true
libc.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
