[package]
name = "lsw-path"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux/Windows path translation for LSW."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
