[package]
name = "lsw-pe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PE (Windows executable) detection and inspection for LSW."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
object.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
