[package]
name = "lsw-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows runtime (Wine) provider for LSW."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lsw-config.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
